# OpenGL

./: CMakeLists.txt  README.md
common/: gl_utils.cpp  gl_utils.h  math_funcs.cpp  math_funcs.h
hello/src/: logging.h  main.cpp
mat_trans/: main.cpp
shader/: main.cpp
shader/src/: logging.cpp  main.cpp
vertex_buffer_obj/: main.cpp  test2_fs.glsl  test2_vs.glsl
virt_cam/: main.cpp  test4_vs.glsl  test5_vs.glsl
